# mkvaudur

./: Cargo.toml  README.md
.github/workflows/: generator-generic-ossf-slsa3-publish.yml  release.yml  rust.yml
src/: args.rs  display.rs  export.rs  lib.rs  main.rs  mediainfo.rs
src/export/: append.rs  output.rs  trim.rs
tests/: integration_tests.rs  ref_video_8s.mkv  test_video_2s.mkv
